--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <img class="pic img-fluid mb-4 mt-5 mx-auto d-block" src="ajipic1.png" alt="Responsive image">
      </div>
      <div class=" container text-center col-6">
-		<p class= "intro mt-2 h5 p-2">I am a proactive, ingenious, and solution-focused Software Developer, holding a PhD in Sustainable Energy. I have extensive experience in Software development, Data modelling and migration  Data coordination, Machine learning, Project design and management Operations Research - <a href ="my_cv/cv2.html" target="_blank">my CV here!</a> or check <a href="https://www.linkedin.com/in/ganiyuajisegiri/">@GaniyuTheDeveloper</a>. I have serious passion for automation, animations and creating intuitive user friendly applications.These brought me into the world of Web Development. </p>
+		<p class= "intro mt-2 h5 p-2">I am a proactive, ingenious, and solution-focused Software Developer, holding a PhD in Sustainable Energy. I have extensive experience in Software development, Data modelling and migration  Data coordination, Machine learning, Project design and management Operations Research - <a href ="my_cv/cv2.html" target="_blank">my CV here!</a> or check <a href="https://www.linkedin.com/in/ajisegga/">@GaniyuTheDeveloper</a>. I have serious passion for automation, animations and creating intuitive user friendly applications.These brought me into the world of Web Development. </p>
     <p class= "intro mt-2 h5 p-2"> Get in touch let's make something special.</p>
   </div>
   <div class="about">
@@ -211,10 +211,10 @@ Form Ends Here -->
   <marquee id="marquee" class= "mb-2">Hello and Welcome to my Site. Don't Forget to Check and Contact Me <a href ="my_cv/cv2.html" target="_blank">here</a> or check me <a href="https://www.linkedin.com/in/ganiyuajisegiri/">@GaniyuTheDeveloper</a>. Thank you!</marquee>
   <ul class="socicons-list">
       <li>
-        <a href="https://github.com/ajisegiriganiyu" target='_blank'><span class="socicon-github"></span></a> 
+        <a href="https://github.com/ajisegga/" target='_blank'><span class="socicon-github"></span></a> 
       </li>
         <li>
-        <a href="https://www.linkedin.com/in/ganiyuajisegiri/" target='_blank'><span class="socicon-linkedin"></span></a> 
+        <a href="https://www.linkedin.com/in/ajisegga/" target='_blank'><span class="socicon-linkedin"></span></a> 
       </li> 
   </ul>
   
