--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	         <a class="nav-item nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
            <a class="nav-item nav-link" href="#about">About</a>
            <!--<a class="nav-item nav-link" href="#portfolio">Portfolio</a> -->
-	         <a class="nav-item nav-link" href="#contact">Contact</a>
+	         <!-- <a class="nav-item nav-link" href="#contact">Contact</a> -->
         </div>
         </div>
          </div>
