--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	         <a class="nav-item nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
            <a class="nav-item nav-link" href="#about">About</a>
            <!--<a class="nav-item nav-link" href="#portfolio">Portfolio</a> -->
-	         <!-- <a class="nav-item nav-link" href="#contact">Contact</a> -->
+	         <a class="nav-item nav-link" href="#contact">Contact</a>
         </div>
         </div>
          </div>
@@ -185,7 +185,7 @@
  </div>
 <!-- Card Component ends here -->
 
-<!-- Form Starts Here 
+<!-- Form Starts Here -->
 <div class="container w-50 mt-5 mb-5 form-div">
 <form id="contact">
   <div class="form-group">
@@ -205,7 +205,7 @@
   <button type="submit" class="btn btn-primary mt-3 mb-3" id="form-btn">Contact Me!</button>
 </form>
 </div>
-Form Ends Here -->
+<!-- Form Ends Here -->
 
 <footer id= "footer">
   <marquee id="marquee" class= "mb-2">Hello and Welcome to my Site. Don't Forget to Check and Contact Me <a href ="my_cv/cv2.html" target="_blank">here</a> or check me <a href="https://www.linkedin.com/in/ganiyuajisegiri/">@GaniyuTheDeveloper</a>. Thank you!</marquee>
