--- a/my_cv/cv2.html
+++ b/my_cv/cv2.html
@@ -18,7 +18,7 @@
     	<div class="container top pt-3 pb-3 pr-4 text-left"">
 		<h1 class="mb-1">Ganiyu Ajisegiri (PhD)</h1>
 	         <h3 class="pb-2 mt-2">Software Developer</h3>
-	         <p class="pb-2 w-75">A passionate Developer skilled in Java, JavaScript, Python, Machine Leanring and AI <a href="https://www.linkedin.com/in/ganiyuajisegiri/">@GaniyuTheDeveloper</a></p>
+	         <p class="pb-2 w-75">A passionate Developer skilled in Java, JavaScript, Python, Machine Leanring and AI <a href="https://www.linkedin.com/in/ajisegga/">@GaniyuTheDeveloper</a></p>
         <img src="ajipic1.png" alt="My Piicture" class="rounded-circle float-right img-fluid d-sm-none d-md-block d-none"> 
         </div>	
         </div> 
@@ -28,7 +28,7 @@
 				<li class="d-inline p-2">ajisegiriganiyu@gmail.com</li>
 				<li class="d-inline p-2"><a href="https://github.com/ajisegiriganiyu" target="_blank">github.com/ajisegiriganiyu</a></li>
 				<li class="d-inline p-2">Phone: +447442697878</li>
-				<li class="d-inline p-2"><a href="https://www.linkedin.com/in/ganiyuajisegiri/">https://www.linkedin.com/in/ganiyuajisegiri/</a></li>
+				<li class="d-inline p-2"><a href="https://www.linkedin.com/in/ajisegga/">https://www.linkedin.com/in/ajisegga/</a></li>
 				<li class="pt-2">Leeds, United Kingdom</li>
 	        </ul>
 	   </div>
