--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   <marquee id="marquee" class= "mb-2">Hello and Welcome to my Site. Don't Forget to Check and Contact Me <a href ="my_cv/cv2.html" target="_blank">here</a> or check me <a href="https://www.linkedin.com/in/ganiyuajisegiri/">@GaniyuTheDeveloper</a>. Thank you!</marquee>
   <ul class="socicons-list">
       <li>
-        <a href="https://github.com/ajisegga/" target='_blank'><span class="socicon-github"></span></a> 
+        <a href="https://github.com/ajisegiriganiyu/" target='_blank'><span class="socicon-github"></span></a> 
       </li>
         <li>
         <a href="https://www.linkedin.com/in/ajisegga/" target='_blank'><span class="socicon-linkedin"></span></a> 
