--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <!-- Form Ends Here -->
 
 <footer id= "footer">
-  <marquee id="marquee" class= "mb-2">Hello and Welcome to my Site. Don't Forget to Check and Contact Me <a href ="my_cv/cv2.html" target="_blank">here</a> or check me <a href="https://www.linkedin.com/in/ganiyuajisegiri/">@GaniyuTheDeveloper</a>. Thank you!</marquee>
+  <marquee id="marquee" class= "mb-2">Hello and Welcome to my Site. Don't Forget to Check and Contact Me <a href ="my_cv/cv2.html" target="_blank">here</a> or check me <a href="https://www.linkedin.com/in/ajisegga/">@GaniyuTheDeveloper</a>. Thank you!</marquee>
   <ul class="socicons-list">
       <li>
         <a href="https://github.com/ajisegiriganiyu/" target='_blank'><span class="socicon-github"></span></a> 
